$Id: History,v 1.5 2000-06-17 11:53:02 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Test 01 History file
                    --------------------
This file should be used by the test developer to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

June 17, 2000  John Allison  (test01-V01-01-01)
- Updated test01.out for geant4-01-01-ref-06.

June 9, 2000  John Allison  (test01-V01-01-00)
- Improved GNUmakefile.

November 25, 99  V.Grichine and J. Apostolakis     -  

Created second (with booleans) version of this test, starting from RayGunTest.cc
Renamed  RayGunTest.cc to test01.cc

April 22, 98  V.Grichine and J. Apostolakis     -  rgt-01-00-01

Created first version of this test, starting from tests/test01.
Renamed test01.cc to RayGunTest.cc